# bl1nk-modal

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  BL1NK_SEARCH_V1_SPEC.md  CLAUDE.md  README.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/modal-image-builds/: SKILL.md
.claude/skills/modal-image-builds/references/: ai-agent-search-runtime.md  fastapi-endpoint-notes.md  modal-1.5.1-notes.md
.claude/skills/modal-image-builds/templates/: build_script.py  deploy_script.py
.claude/skills/modal-image-dev/: SKILL.md
.claude/skills/modal-image-dev/references/: bl1nk-search-v1-spec.md
.claude/skills/modal/references/api/: modal.CloudBucketMount.md  modal.Period.md  modal.Volume.md
.claude/skills/modal/references/guide/: audit-logs.md  existing-images.md  sandbox-networking.md  trigger-deployed-functions.md
.claude/skills/modals/modal-image-builds/references/: ai-agent-search-runtime.md  (+1 more)
.claude/skills/setup-pre-commit/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: sync-triage-labels.yml
conductor/: index.md  modal.md  plan.md  product-guidelines.md  product.md  setup_state.json  spec.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/: CLAUDE.md
conductor/code_styleguides/: rust.md
conductor/tracks/rust_engine_20260421/: plan.md  spec.md
modal-agy/: daytona.yaml  image.py  orchestrator.sh  setup.sh
modal-agy/context/: AGENTS.md  BOOT.md  settings.json
modal-apps/bl1nk-app/: README.md  SETUP.md  TODO.md  modal_app.py
modal-apps/bl1nk-app/context/agy/: SOUL.md
modal-apps/bl1nk-app/engine/: Cargo.toml
modal-apps/bl1nk-app/engine/src/: detector.rs  file_detector.rs  policy.rs  resolver.rs  size_calc.rs
modal-apps/bl1nk-app/scripts/: build.sh  check.sh  setup.sh
modal-apps/bl1nk-app/subagents/: agy_headless.py  opencode.py  sandbox_runner.py
modal-apps/bl1nk-app/tests/: test_api.py  test_update_task.py  test_verify_signature.py
modal-apps/modal-agy/: README.md  TODO.md  daytona.yaml  image.py  modal_app.py  orchestrator.sh  pyproject.toml  run.sh  setup.sh
modal-apps/modal-agy/context/: TOOLS.md
modal-apps/modal-agy/tests/: conftest.py  test_modal_app.py
modal-apps/modal-opencode/: .env.example  TODO.md  opencode.py
modal-apps/modal-opencode/.gemini/commands/: speckit.git.commit.toml  speckit.git.initialize.toml
modal-apps/modal-opencode/.github/workflows/: bl1nk-labels.yml
modal-apps/modal-opencode/.specify/: init-options.json
modal-apps/modal-opencode/.specify/workflows/: workflow-registry.json
modal-apps/modal-opencode/docs/conductor/: index.md  product.md  tech-stack.md
modal-apps/modal-opencode/engine/: TODO.md
modal-apps/modal-opencode/engine/src/: lib.rs  policy.rs
modal-apps/modal-opencode/tests/: test_opencode.py
modal-apps/modal-runner/: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
modal-apps/modal-runner/.gemini/: GEMINI.md  settings.json
modal-apps/modal-runner/.omp/: setup-scope.json
modal-apps/modal-runner/tests/: test_line_notify.py  test_parse_commit.py  test_webhook.py
modal-apps/modal-sandbox/: .gitignore  SETUP.md  TODO.md  modal_app.py  pyproject.toml
modal-apps/modal-sandbox/scripts/: build.sh  check.sh  publish.sh  setup.sh  shell.sh
modal-apps/modal-sandbox/tests/: conftest.py  test_api.py  test_dev.py
modal-images/: .env.example  README.md  TODO.md  _tags.py  build.sh  build_bl1nk_rust.py  build_bl1nk_search.py  deploy_bl1nk_search.py  pyproject.toml  search_service.py
modal-images/tests/: conftest.py  test_build_rust.py  test_build_search.py  test_search_service.py  test_tags.py
modal-opencode/.github/: labels.json
modal-opencode/conductor/: plan.md  spec.md
scripts/: fix_whitespace.py  install-windows.ps1
(+12 files in other folders)
