[project]
name = "modal-agy"
version = "0.1.0"
description = "Agent sandbox orchestrator for running the agy CLI on Modal"
requires-python = ">=3.11"

dependencies = [
    "modal>=1.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
