[project]
name = "modal-agy"
version = "0.1.0"
description = "Agent sandbox orchestrator for running the agy CLI on Modal"
requires-python = ">=3.11"

dependencies = [
    "modal>=1.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
