[project]
name = "modal-runner"
version = "0.1.0"
description = "Commit Task Tracker - webhook-driven task tracking on Modal"
requires-python = ">=3.11"

dependencies = [
    "modal>=1.1.4",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
