[project]
name = "modal-sandbox"
version = "0.2.0"
description = "Modal Sandbox Service - v2.1 architecture with sandbox-id-based design"
requires-python = ">=3.12"

dependencies = [
    "modal>=1.1.4",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.2",
    "mypy>=1.16.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"